--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-<h1>HTML 5 Bootstrap!</h1>
-<p>This is the result of what would happen if <a href="http://html5boilerplate.com/">H5BP</a>, complete with <a href="https://github.com/h5bp/ant-build-script">build script</a>, had a bab with <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>. This was built using initializr but it is easier to put it into github and <code>git clone</code></p>
+HTML 5 Bootstrap!
+=================
+
+This is the result of what would happen if [H5BP](http://html5boilerplate.com/), complete with [build script](https://github.com/h5bp/ant-build-script), had a baby with [Twitter Bootstrap](http://twitter.github.com/bootstrap/). This was built using initializr but it is easier to put it into github and `git clone`</p>
